(lang dune 3.16)

(name ServiceConfig)

(generate_opam_files true)

(source
 (github username/reponame))

(package
 (name ServiceConfig)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune)
)

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
